finalize speed up heuristics experiments

--- a/master_thesis/sections/experiments.tex
+++ b/master_thesis/sections/experiments.tex
@@ -246,10 +246,10 @@ best configuration of \emph{KaHyPar} and \KaHyPar{MF} is our baseline flow confi
 Section \ref{sec:flow_configuration}. The index of the remaining variants of \KaHyPar{MF} 
 describes which speed-up heuristics are enabled (see Section \ref{sec:flow_local_search_hypergraph}).
 On average, enabling all speed up heuristics worsen the quality of \KaHyPar{MF} only by 
-$0.07\%$. On the other hand the \emph{Max-Flow-Min-Cut} computations are significantly faster 
+$0.09\%$. On the other hand the \emph{Max-Flow-Min-Cut} computations are significantly faster 
 by a factor of $\approx 2$. In its final configuration \KaHyParConfig{MF}{R1,R2,R3} computes 
-partitions with $\approx 2\%$ better quality ($(\lambda - 1)$-metric) than \KaHyPar{CA} by a 
-slowdown only of a factor of $\approx 2$. In the following we will denote our final 
+partitions with $2\%$ better quality ($(\lambda - 1)$-metric) than \KaHyPar{CA} by a 
+slowdown only of a factor of $\le 2$. In the following we will denote our final 
 configuration \KaHyParConfig{MF}{R1,R2,R3} with \KaHyPar{MF}.
 
 \begin{table}
