abstract and acknowledgement

--- a/master_thesis/sections/introduction.tex
+++ b/master_thesis/sections/introduction.tex
@@ -1,4 +1,4 @@
-Hypergraphs are generalization of graphs, where each (hyper)edge can connect 
+Hypergraphs are a generalization of graphs, where each (hyper)edge can connect 
 more than two (hyper)nodes. The $k$-way hypergraph partitioning problem is to 
 patition the vertices of a hypergraph into $k$ disjoint non-empty blocks such
 that the size of each block satisfy a lower and upper bound, while we simultanously 
@@ -14,7 +14,7 @@ decompose a formula into smaller subformulas, which can be solved easier \cite{m
 Beneath the classical application areas hypergraph partitioning can also be found
 in more vivid areas like \emph{Warehouse Planning}. A warehouse consists of several
 storage spaces where products can be placed. If a list of previous orders is available, 
-we can interprete the products as vertices and the orders as hyperedges. If we
+we can interpret the products as vertices and the orders as hyperedges. If we
 partition the hypergraph into $k$ blocks, where $k$ is the number of storage spaces,
 we can place products in the warehouse such that products are close to each other if
 they are often ordered together.\\
