--- a/master_thesis/master_thesis.tex
+++ b/master_thesis/master_thesis.tex
@@ -207,50 +207,60 @@ Karlsruhe, den 22.12.2017
 
 \vspace*{0pt}\vfill
 
+\selectlanguage{english}
+\begin{abstract}
+\centerline{\textbf{Abstract}}
+
+Currently, algorithms based on the \emph{FM} idea \cite{fiduccia1988linear} are the 
+only practical heuristics to improve a $k$-way
+partition in a multilevel hypergraph partitioner. However, they are often criticized for their 
+limited ability to lookahead \cite{zhao2002effective}. It might be more beneficial to move a 
+hypernode with small gain, because it will induce many good moves later.
+We present an alternative \emph{local search} approach based on \emph{Max-Flow-Min-Cut}
+computations. The framework is inspired by the work of Sanders and Schulz \cite{sanders2011engineering} who
+successfully showed that \emph{flow}-based refinement in combination with the \emph{FM}
+algorithm significantly improve the quality of partitions in a multilevel graph partitioner.
+In this work, we develop different modeling techniques of a hypergraph as flow network and
+show how to improves the connectivity metric of a $k$-way partition by building a flow problem 
+on a subset of the vertices. We integrated the framework in the hypergraph partitioner 
+\emph{KaHyPar} by applying and adapting the basic framework of \cite{sanders2011engineering}.
+On our large benchmark set with $3222$ instances our new configuration outperforms all 
+state-of-the-art hypergraph partitioner on $70\%$ of the instances. In comparison to the latest
+configuration of \emph{KaHyPar} our new approach produces $2\%$ better quality by a performance
+slowdown only by a factor of $2$.
+
+\end{abstract}
+
 \selectlanguage{german}
 \begin{abstract}
 \centerline{\textbf{Zusammenfassung}}
 
-Hier die deutsche Zusammenfassung.
-
-Ich bin Blindtext. Von Geburt an. Es hat lange gedauert, bis ich begriffen habe, 
-was es bedeutet, ein blinder Text zu sein: Man macht keinen Sinn. Man wirkt hier 
-und da aus dem Zusammenhang gerissen. Oft wird man gar nicht erst gelesen. Aber 
-bin ich deshalb ein schlechter Text? Ich weiß, dass ich nie die Chance haben werde 
-im Stern zu erscheinen. Aber bin ich darum weniger wichtig? Ich bin blind! Aber ich 
-bin gerne Text. Und sollten Sie mich jetzt tatsächlich zu Ende lesen, dann habe ich 
-etwas geschafft, was den meisten normalen Texten nicht gelingt.
-
-Ich bin Blindtext. Von Geburt an. Es hat lange gedauert, bis ich begriffen habe, 
-was es bedeutet, ein blinder Text zu sein: Man macht keinen Sinn. Man wirkt hier 
-und da aus dem Zusammenhang gerissen. Oft wird man gar nicht erst gelesen. Aber bin
-ich deshalb ein schlechter Text? Ich weiß, dass ich nie die Chance haben werde im Stern 
-zu erscheinen. Aber bin ich darum weniger wichtig? Ich bin blind! Aber ich bin gerne Text.
+Algorithmen basierend auf der \emph{FM}-Idee \cite{fiduccia1988linear} sind zur Zeit 
+die einzigsten praktischen Heuristiken, um eine $k$-teilige
+Partitionierung in einem \emph{Multilevel Hypergraph Partitioner} zu verbessern. 
+Jedoch werden sie oft kritisiert für ihre limitierte Eigenschaft
+vorrauszuschauen \cite{zhao2002effective}. Zum Beispiel könnte es von Vorteil sein ein
+Knoten mit geringem \emph{Gain} zu verschieben, weil er vielleicht später viele bessere
+Verschiebungen induziert. Wir präsentieren einen alternativen \emph{Lokale 
+Suche} Ansatz basierend auf \emph{Max-Flow-Min-Cut} Berechnungen. Das Framework ist inspiriert 
+durch die Arbeit von Sanders und Schulz, welche gezeigt haben, dass ein \emph{flow}-basierter
+Ansatz in Kombination mit dem \emph{FM}-Algorithmus signifikant die Qualität von Partitionierungen
+in einem \emph{Multilevel Graph Partitioner} verbessert \cite{sanders2011engineering}. 
+In dieser Arbeit entwickeln wir verschiedene Modellierungstechnicken eines Hypergraphen 
+als Flussnetzwerk und zeigen wie die \emph{connectivity metric} einer $k$-teiligen 
+Partitionierung verbessert werden kann, indem ein Flussproblem auf einer
+Teilmenge der Knoten aufgebaut wird. Wir haben das Framework in den
+\emph{Hypergraph Partitioner KaHyPar} integriert, indem wir das Framework von \cite{sanders2011engineering}
+übernommen und angepasst haben. Auf unserem großen \emph{Benchmark Set} mit $3222$ Instanzen
+erzielt unsere neue Konfiguration auf $70\%$ der Instanzen eine bessere Qualität als die meisten
+\emph{State-of-the-Art} Partitionierer. Im Vergleich zu der letzten Konfiguration von \emph{KaHyPar}
+erreichen wir mit unserem Ansatz $2\%$ bessere Qualität mit nur doppelt so langer Laufzeit.
 
 \end{abstract}
 
 \vfill
 
 \selectlanguage{english}
-\begin{abstract}
-\centerline{\textbf{Abstract}}
-
-And here an English translation of the German abstract.
-
-I'm blind text. From birth. It took a long time until I realized what it means 
-to be random text: You make no sense. You stand here and there out of context. 
-Frequently, they do not even read. But I have a bad copy? I know that I will 
-never have the chance of appearing in the. But I'm any less important? I'm blind! 
-But I like to text. And you should see me now actually over, then I have accomplished 
-something that is not possible in most normal copies.
-
-I'm blind text. From birth. It took a long time until I realized what it means t
-o be random text: You make no sense. You stand here and there out of context. 
-Frequently, they do not even read. But I have a bad copy? I know that I will 
-never have the chance of appearing in the. But I'm any less important? I'm blind! 
-But I like to text.
-
-\end{abstract}
 
 \vfill\vfill\vfill
 \clearpage
@@ -261,12 +271,19 @@ But I like to text.
 
 \section*{Acknowledgements}
 
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo 
-ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis 
-parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, 
-ellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede 
-justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, 
-imperdiet a, venenatis vitae, justo.
+A good mentor is important for staying motivated and to have the feeling to work
+on something meaningful. Since my bachelor thesis, I work together with Sebastian
+Schlag in the research area of \emph{Hypergraph Partitioning}. The decision to further
+work on this topic was not only a matter of interest, it was mainly a decision based
+on our outstanding interpersonal working relationship. Our intellectual discussions
+were characterized by the right balance of fun and the necessary serious to work towards
+a common goal. I think here is the right place to thank you for the endless time, which I have spent
+in your office over the last three years and which have made me a better computer scientist. \\
+Further, I would like to thank my girl friend Alessa Dreixler. To be together with a 
+computer scientist could be sometimes very complicated and exhausting. Especially,
+if anger and frustration dominated my working day. With her understanding and motivation, 
+I could continue every morning with the same energy and passion as the day before.
+
 
 \vfill\vfill\vfill
 \clearpage
